tests/negative/symbols/use_undef3.orng
// use_undef3.orng:10:9: error: symbol `x` is never defined
//     add(4, x)
//        ^
// use_undef3.orng:9:10: note: declared here
//     let x: Int = undefined
//         ^
// 
fn main() -> Int {
    let x: Int = undefined
    add(4, x)
}

fn add(x: Int, y: Int) -> Int { x + y }